--- a/beast_scheme/package/reflexes.htm
+++ b/beast_scheme/package/reflexes.htm
@@ -11,9 +11,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Безусловные и условные рефлексы</h1>
 </div>
 
-Здесь отрабатываются три вида рефлексов в следующей иерархической последовательности:<br>
-1. Условные рефлексы - на основе предыдущих безусловных (но не древних, а полных) или условных - связанных с новыми стимулами. Собираются в conditionReflexesIdArr<br>
-Каждый последующий вид рефлексов имеет приоритет над предыдущими, т.е. те не выполняются, если есть приоритетный.<br>
+Здесь отрабатываются четыре вида рефлексов в следующей иерархической последовательности:<br>
+1. Условные рефлексы - на основе предыдущих безусловных (но не древних, а полных) или условных - связанных с новыми стимулами.
+Собираются в conditionReflexesIdArr. Каждый последующий вид рефлексов имеет приоритет над предыдущими, т.е. те не выполняются,
+если есть приоритетный.<br>
 2. Новые безусловные - с прописанными пусковыми стимулами. Собираются в geneticReflexesIdArr<br>
 3. Древние безусловные - у которых в условиях не прописаны пусковые стимулы. Собираются в oldReflexesIdArr<br>
 4. Древнейшие безусловные - с прошитой генетической целью (какие ID гомео-параметров улучшает действие рефлекса из http://go/pages/terminal_actions.php).<br>
@@ -21,17 +22,17 @@
 <br>
 Для образования условных рефлексов необходимо:<br>
 1. Совпадение во времени (сочетание) какого-либо индифферентного раздражителя (условного)
-	с раздражителем, вызывающим соответствующий безусловный рефлекс (безусловный раздражитель).<br>
+  с раздражителем, вызывающим соответствующий безусловный рефлекс (безусловный раздражитель).<br>
 2. Необходимо, чтобы действие условного раздражителя несколько предшествовало действию безусловного.<br>
 3. Условный раздражитель должен быть не вызывающим значительной самостоятельной реакции.<br>
 4. Рефлекс возникает только после нескольких повторений сочетаний 2 (news_detectior.go: if tempImg.Count > 2 - в func updateNewsConditions(rank int)),
 это избавляет от случайных связей.<br>
 И возникаеющий образ рефлекса гасится, если долго не подтверждаются сочетания, за ночь - точно.<br>
 Условия затухания условного рефлекса:<br>
-1. Долгое отсутствие пускового стимула (узла ветки, с которого он запускается) – это легко реализуется добавлением в структуру у.рефлекса lastActivation int – в числе пульсов и времени протухания истекших рефлексов;<br>
-2. Действие конкурентных раздражителей – т.е. подавление конкурентными рефлексами и автоматизмами – т.е. если есть более значимый рефлекс или любой автоматизм на тот же пусковой стимул, то он блокирует у.рефлекс. В структуре у.рефлекса есть его ранг (число цепочки родителей), чем он выше, тем рефлекс приоритетнее среди других. Автоматизм приоритетнее любого рефлекса.<br>
-3. При отсутствии “подкрепления” после совершенного действия. Но безусловные рефлексы не угасают при этом, они безусловны и по отношению к тому, что происходит после действия и их “подкрепление” – обусловлено наследственной эволюцией: безусловные рефлексы постоянны, даны от рождения и не угасают на протяжении всей жизни.. У условных рефлексов точно та же функциональная задача, только с новыми стимулами, значит, им так же не нужно последующее подкреплением. В литературе часто путается отсутствие подкрепления с дезадаптация, а так же условные рефлексы и автоматизмы, образующиеся при осознании.<br>
-4. Разные условные рефлексы без подкрепления угасают с неодинаковой скоростью. Более "молодые" и непрочные условные рефлексы угасают быстрее, чем более "старые", прочные условно-рефлекторные связи (func conditionRexlexFound).<br>
+1. Долгое отсутствие пускового стимула (узла ветки, с которого он запускается) – это легко реализуется добавлением в структуру усл. рефлекса lastActivation int – в числе пульсов и времени протухания истекших рефлексов;<br>
+2. Действие конкурентных раздражителей – т.е. подавление конкурентными рефлексами и автоматизмами – т.е. если есть более значимый рефлекс или любой автоматизм на тот же пусковой стимул, то он блокирует усл. рефлекс. В структуре усл. рефлекса есть его ранг (число цепочки родителей), чем он выше, тем рефлекс приоритетнее среди других. Автоматизм приоритетнее любого рефлекса.<br>
+3. При отсутствии «подкрепления» после совершенного действия. Но безусловные рефлексы не угасают при этом, они безусловны и по отношению к тому, что происходит после действия и их «подкрепление» – обусловлеслно наследственной эволюцией: безусловные рефлексы постоянны, даны от рождения и не угасают на протяжении всей жизни.. У условных рефлексов точно та же функциональная задача, только с новыми стимулами, значит, им так же не нужно последующее подкреплением. В литературе часто путается отсутствие подкрепления с дезадаптация, а так же условные рефлексы и автоматизмы, образующиеся при осознании.<br>
+4. Разные условные рефлексы без подкрепления угасают с неодинаковой скоростью. Более «молодые» и непрочные условные рефлексы угасают быстрее, чем более «старые», прочные условно-рефлекторные связи (func conditionRexlexFound).<br>
 <br>
 Условный рефлекс может образовываться на основе безусловного
 или на основе имеющегося безусловного,
@@ -39,16 +40,17 @@
 Такие цепи рефлексов ничем не ограничены.<br>
 
 РЕЗЮМЕ<br>
-1. Усл.рефлекс возникает там, где нет безусловного на основе нового стимула N,
-привзяывая к нему действия того рефлекса (условного или безусловного),
+1. Усл. рефлекс возникает там, где нет безусловного на основе нового стимула N,
+привязывая к нему действия того рефлекса (условного или безусловного),
 которое вызывало реакцию ПОСЛЕ данного нового стимула M.<br>
-2. Но темерь если в восприятии появляется стимул N,
+2. Но теперь если в восприятии появляется стимул N,
 то вызываемый им условный рефлекс перекрывает все рефлексы более низкого уровня,
 в том числе условные меньшего уровня.<br>
-Так что в структуре бесусловного рефлекса есть параметр: rank int,
+Так что в структуре безусловного рефлекса есть параметр: rank int,
 который увеличивается, если реакция наследуется от условного рефлекса
 и тогда рефлекс с рангом выше, перекрывает все рангом ниже.
-По умолчаню у безусловных рефлексов rank равен 0.<br>
+По умолчанию у безусловных рефлексов rank равен 0.<br>
+
 <br>  
 <li><a href="../funcs/ReflexCountPuls.htm">ReflexCountPuls</a> - коррекция текущего состояния гомеостаза и базового контекста с каждым пульсом</li>
 <li><a href="../funcs/setOldActiveCurTriggerStimulsVal.htm">setOldActiveCurTriggerStimulsVal</a> - Активация дерва рефлексов при любом изменении условий с проверкой по каждому пульсу</li>
