--- a/beast_scheme/package/add/reflex_tree.htm
+++ b/beast_scheme/package/add/reflex_tree.htm
@@ -2,24 +2,55 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Дерево рефлексов</title>
+  <title>Безусловные рефлексы</title>
   <link rel="stylesheet" href="sys/common.css">
 </head>
 <body style="margin-left:20px;font-family:arial;font-size:14px;width:1000px;">
 <div style="position:relative;height:20px;margin-bottom:20px;">
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
-<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Дерево рефлексов</h1>
+<h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Безусловные рефлексы</h1>
 </div>
-<p>Для формирования вербальных сенсоров Beast есть 2 способа:</p>
-<ul>
-  <li>вводится объемный текст через специальное окно ввода go/pages/words.php – ускоренный вариант, в основном для тестирования</li>
-  <li>при отсылке сообщений через окно пульта «Поcлать сообщение Beastу» – рекомендуемый вариант</li>
-</ul>
-<p>Формирование сенсоров означает, что из общего внешнего шумового фона были выделены повторяющиеся фрагменты и зафиксированы как примитивы восприятия, которые в дальнейшем будут активироваться на соответствующие фрагменты. То есть уже на первичной стадии восприятия происходит распознавание закономерностей через частотный анализ сигналов. Поэтому Beast прежде чем сформировать новый распознаватель, сохраняет фрагмент-слово во временном массиве tempArr, и только если он повторится более 4 раз, создает из него сенсор.</p>
-<p>Из полученных сенсоров-слов формируется второй тип сенсора – фразы, ограниченный длиной не более 6 слов. Таким образом Beast получает возможность уже на рефлекторном уровне реагировать как на отдельные слова, так и на фразы.</p>
+<p>Безусловные рефлексы у Beast – это жестко запрограммированные реакции на действия кнопок с Пульта. Устанавливаются на 
+  странице Рефлексы http://go/pages/reflexes.php через заполнение справочников и шаблонов. По аналогии с природной нервной 
+  системой это закрепленные эволюционным отбором не изменяемые реакции.</p>
+<p>Рефлекторное реагирование происходит разово при возникновении пусковых условий, формирующих итоговый Образ восприятия 
+  TriggerStimulsArr из трех уровней:</p>
+<ol>
+  <li><b>Изменение Базового состояния</b> – если изменилось базовое состояние Плохо, Норма, Хорошо</li>
+  <li><b>Изменение Базовых контекстов</b> - если изменилось сочетание текущих активных базовых контекстов</li>
+  <li><b>Изменение Пусковых стимулов</b> - если было активировано сочетание кнопок действий с пульта</li>
+</ol>
+<p>Комбинация трех уровней Образа восприятия учитываются только в порядке, указанном выше, задавая тем самым 
+  древовидную структуру Образа восприятия. 
+  Это означает, что возможны комбинации Базового Состояния и Базовых контекстов, без учета Пусковых стимулов, 
+  но не возможны комбинации Базового Состояния и Пусковых стимулов без учета Базовых контекстов. Образ восприятия 
+  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.</p>
 <table>
   <tr>
-    <td><img src="../../img/Reflex_tree.png" width="948" height="1432" border="0" alt="Дерево рефлексов"></td>
+    <td><img src="../../img/Reflex_tree.png" width="948" height="1432" border="0" alt="Дерево безусловных рефлексов"></td>
   </tr>
 </table>
-<p>Для оптимизации поиска сенсоры представлены в виде древовидной структуры, где для слов первичными узлами являются буквы алфавита и спец. Символы, а для дерева фраз – слова. При такой схеме сенсор представляет собой ветку, где ID конечного узла является уникальным распознавателем сенсора. Связи между узлами позволяют быстро находить производные варианты от начальных фрагментов сенсора, что значительно ускоряет поиск и позволяет получить мягкое распознавание по неполной информации. Например: «привет – приветствую – приветик» имеют общий фрагмент «привет», и если на него есть специфический рефлекс, а на  «приветствую – приветик» нет, то он и активируется потому, что «ствую» и «ик» это продолжение ветвления от ветки-сенсора «привет».</p>
+<p>Это в свою очередь задает иерархию активации трех типов безусловных рефлексов:</p>
+<ol>
+  <li><b>Древнейший безусловный</b> – активируется на сочетание изменений Базового состояния и Базовых контекстов, как внутренняя 
+    пассивная стабилизирующая реакция. Определяется по данным Справочника действий (go/pages/terminal_actions.php) в 
+    колонке «Какие ID гомео-параметров улучшает действие». Служит реакцией «по умолчанию», когда нет подходящего Образу 
+    восприятия рефлекса. В этом случае Beast по текущей проблеме (какие Базовые потребности вышли из Норма) по данным 
+    справочника находит и активирует нужные действия.</br>
+    Изменения сочетаний Базовых контекстов в ответ на изменения уровней Базовых параметров это тоже безусловный рефлекс, заданный так же не 
+    явно через справочники на странице Гомеостаз (go/pages/gomeostaz.php).</li>
+  <li><b>Древний безусловный</b> - активируется на сочетание изменений Базового состояния и Базовых контекстов, по данным справочника рефлексов 
+    (go/pages/reflexes.php), где не заполнен столбец Пусковых стимулов.</li>
+    <li><b>Новый безусловный</b> - активируется полным пусковым Образом восприятия, когда есть изменения Базового состояния, 
+      Базовых контекстов и Пусковых стимулов.</li>  
+</ol>
+Активизация происходит по правилу: если активны все три уровня Образа восприятия, ищется Новый безусловный рефлекс, если только 
+первые два – Древний безусловный, если ничто не нашлось – древнейший безусловный. Таким образом на изменение сочетаний Базовых контекстов и 
+Базового состояния всегда будет как минимум реакция от Древнейшего безусловного рефлекса.</br>
+Выполнение Безусловного рефлекса означает выполнение действий, параметры воздействий которых задаются в справочнике Действия 
+(go/pages/terminal_actions.php). Собственно в этом и состоит гомеостатическая цель рефлекса – спровоцировать такие изменения вышедших 
+из Норма Базовых потребностей, которые будут способствовать их возврату в Норма. При этом очевидна ограниченность такого реагирования: 
+далеко не всегда одиночное действие способствует стабилизации разбалансированной Базовой потребности, и нет никакой возможности оценить 
+последствия выполнения рефлекса и улучшить его. Рефлекс всегда будет выполняться при возникновении пускового Образа восприятия. 
+Единственное, что можно сделать на этом уровне – через механизм условных рефлексов временно переопределить Образ восприятия с одного 
+рефлекса на другой. Но полноценная модификация, вплоть до создания новых вариантов реагирования происходит только на уровне Автоматизмов.
