--- a/beast_scheme/package/add/reflex_tree.htm
+++ b/beast_scheme/package/add/reflex_tree.htm
@@ -10,21 +10,21 @@
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Безусловные рефлексы</h1>
 </div>
-<p>Безусловные рефлексы у Beast – это жестко запрограммированные реакции на действия кнопок с Пульта. Устанавливаются на 
+Безусловные рефлексы у Beast – это жестко запрограммированные реакции на действия кнопок с Пульта. Устанавливаются на 
   странице Рефлексы http://go/pages/reflexes.php через заполнение справочников и шаблонов. По аналогии с природной нервной 
-  системой это закрепленные эволюционным отбором не изменяемые реакции.</p>
-<p>Рефлекторное реагирование происходит разово при возникновении пусковых условий, формирующих итоговый Образ восприятия 
-  TriggerStimulsArr из трех уровней:</p>
+  системой это закрепленные эволюционным отбором не изменяемые реакции.<br>
+Рефлекторное реагирование происходит разово при возникновении пусковых условий, формирующих итоговый Образ восприятия 
+  TriggerStimulsArr из трех уровней:<br>
 <ol>
   <li><b>Изменение Базового состояния</b> – если изменилось базовое состояние Плохо, Норма, Хорошо</li>
   <li><b>Изменение Базовых контекстов</b> - если изменилось сочетание текущих активных базовых контекстов</li>
   <li><b>Изменение Пусковых стимулов</b> - если было активировано сочетание кнопок действий с пульта</li>
 </ol>
-<p>Комбинация трех уровней Образа восприятия учитываются только в порядке, указанном выше, задавая тем самым 
+Комбинация трех уровней Образа восприятия учитываются только в порядке, указанном выше, задавая тем самым 
   древовидную структуру Образа восприятия. 
   Это означает, что возможны комбинации Базового Состояния и Базовых контекстов, без учета Пусковых стимулов, 
   но не возможны комбинации Базового Состояния и Пусковых стимулов без учета Базовых контекстов. Образ восприятия 
-  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.</p>
+  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.<br>
 <table>
   <tr>
     <td><img src="../../img/Reflex_tree.png" width="948" height="1432" border="0" alt="Дерево безусловных рефлексов"></td>
@@ -36,7 +36,7 @@
     пассивная стабилизирующая реакция. Определяется по данным Справочника действий (go/pages/terminal_actions.php) в 
     колонке «Какие ID гомео-параметров улучшает действие». Служит реакцией «по умолчанию», когда нет подходящего Образу 
     восприятия рефлекса. В этом случае Beast по текущей проблеме (какие Базовые потребности вышли из Норма) по данным 
-    справочника находит и активирует нужные действия.</br>
+    справочника находит и активирует нужные действия.<br>
     Изменения сочетаний Базовых контекстов в ответ на изменения уровней Базовых параметров это тоже безусловный рефлекс, заданный так же не 
     явно через справочники на странице Гомеостаз (go/pages/gomeostaz.php).</li>
   <li><b>Древний безусловный</b> - активируется на сочетание изменений Базового состояния и Базовых контекстов, по данным справочника рефлексов 
@@ -46,7 +46,7 @@
 </ol>
 Активизация происходит по правилу: если активны все три уровня Образа восприятия, ищется Новый безусловный рефлекс, если только 
 первые два – Древний безусловный, если ничто не нашлось – древнейший безусловный. Таким образом на изменение сочетаний Базовых контекстов и 
-Базового состояния всегда будет как минимум реакция от Древнейшего безусловного рефлекса.</br>
+Базового состояния всегда будет как минимум реакция от Древнейшего безусловного рефлекса.<br>
 Выполнение Безусловного рефлекса означает выполнение действий, параметры воздействий которых задаются в справочнике Действия 
 (go/pages/terminal_actions.php). Собственно в этом и состоит гомеостатическая цель рефлекса – спровоцировать такие изменения вышедших 
 из Норма Базовых потребностей, которые будут способствовать их возврату в Норма. При этом очевидна ограниченность такого реагирования: 
