--- a/beast_scheme/package/add/base_param.htm
+++ b/beast_scheme/package/add/base_param.htm
@@ -10,38 +10,65 @@
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Базовые потребности</h1>
 </div>
-
-<strong>Базовые потребности</strong> – основа гомеостаза Beast, формируют первичные гомеостатические цели существования Beast как стабилизацию базовых потребностей. Базовые потребности бывают нарастающие и убывающие с каждым пульсом, что определяет тип стабилизации: стараться понизить или повысить потребность, если она соответственно станет выше или ниже критического значения.
-<p><strong>Порог</strong> – значение базовой потребности, пересечение которого означает переход из одного Базового состояния в другое.</p>
-<p><strong>Базовое состояние</strong> – одно из трех состояний, возникающих в зависимости от текущего значения базовой потребности и величины Порога:
+<b>Базовые потребности</b> – основа гомеостаза Beast, формируют первичные гомеостатические цели существования Beast как стабилизацию 
+базовых потребностей. Базовые потребности бывают нарастающие и убывающие с каждым пульсом, что определяет тип стабилизации: 
+стараться понизить или повысить потребность, если она соответственно станет выше или ниже критического значения.</p>
+<b>Порог</b> – значение базовой потребности, пересечение которого означает переход из одного Базового состояния в другое.</p>
+<b>Базовое состояние</b> – одно из трех состояний, возникающих в зависимости от текущего значения базовой потребности и величины Порога:
 <ul>
-<li><strong>Плохо</strong> – если значение лежит в области после Порога у нарастающей базовой потребности, или в области до Порога для убывающей.</li>
-<li><strong>Норма</strong> – если значение лежит в области до Порога у нарастающей базовой потребности, или в области после Порога для убывающей.</li>
-<li><strong>Хорошо</strong> – состояние возникающее при переходе из Плохо в Норма. Оно всегда кратковременно, в данной версии Beast длится 50 пульсов.</li>
+<li><b>Плохо</b> – если значение лежит в области после Порога у нарастающей базовой потребности, или в области до Порога для 
+  убывающей.</li>
+<li><b>Норма</b> – если значение лежит в области до Порога у нарастающей базовой потребности, или в области после Порога для 
+  убывающей.</li>
+<li><b>Хорошо</b> – состояние возникающее при переходе из Плохо в Норма. Оно всегда кратковременно, в данной версии Beast 
+  длится 50 пульсов.</li>
 </ul>
-Система, определяющая текущее базовое состояние Beast путем сравнения его текущих значений базовых потребностей с их порогами представляет из себя Компаратор.
-<p><strong>Компаратор</strong> – устройство для сравнения двух или нескольких величин с определенной точностью и выдачи результата с минимальной задержкой.</p>
+Система, определяющая текущее базовое состояние Beast путем сравнения его текущих значений базовых потребностей с их порогами представляет 
+из себя Компаратор.</p>
+<b>Компаратор</b> – устройство для сравнения двух или нескольких величин с определенной точностью и выдачи результата с 
+  минимальной задержкой.</p>
 <table>
 <tr>
 	<td><img src="../../img/bp1_narastanie.png" width="470" height="470" border="0" alt="Компаратор 1 типа базовой потребности с нарастанием значений"></td>
 	<td><img src="../../img/bp1_ubiwanie.png" width="470" height="470" border="0" alt="Компаратор 1 типа базовой потребности с убыванием значений"></td>
 </tr>
 </table>
-
-<p>Если текущее Базовое состояние Норма, то диапазон значений от текущего до Порога определяет Зону комфортного состояния, если текущее Базовое состояние Плохо, тогда диапазон значений от него до Порога определяет Критическую зону. Отсюда определяются уровни стабилизации Базовых потребностей:</p>
+Если текущее Базовое состояние Норма, то диапазон значений от текущего до Порога определяет Зону комфортного состояния, если текущее 
+Базовое состояние Плохо, тогда диапазон значений от него до Порога определяет Критическую зону. Отсюда определяются уровни стабилизации 
+Базовых потребностей:
 <ul>
-  <li><strong>стало Лучше</strong> – если произошло приближение или заход в Зону комфорта</li>
-  <li><strong>стало Хуже</strong> – если произошло удаление или выход из Зоны комфорта</li>
+  <li><b>стало Лучше</b> – если произошло приближение или заход в Зону комфорта</li>
+  <li><b>стало Хуже</b> – если произошло удаление или выход из Зоны комфорта</li>
 </ul>
-<p>В общем смысле стабилизация Базовой потребности означает нахождение в Зоне комфорта, а выход из зоны – необходимость принятия мер для возврата в нее.</p>
-<p>Важно отметить: строго говоря, на рефлекторном уровне реагирования, когда понятие «Смысл реакции» еще не существует и Beast реагирует как автомат, необходимость в Базовом состоянии Хорошо отсутствует. Достаточно лишь срабатывания состояния Плохо для запуска рефлексов, возвращающих уровень Базовой потребности в Норма, и состояния Норма, для прекращения работы рефлексов. Потому, что состояние Хорошо нужно для закрепления варианта реагирования, способствовавшего улучшению состояния. Но рефлексы не модифицируются по определению, это изначально заданные реакции на определенные пусковые стимулы, поэтому ни каком укреплении или блокировании рефлексов на первичном, рефлекторном уровне не может быть и речи. Это делается на уровне автоматизмов. Но возможность такой модификации должна быть заложена изначально, поэтому Базовое состояние Хорошо введено в схему.</p>
-<p>С другой стороны, каждое из этих трех состояний определяет простейший контекст (стиль) реагирования, в котором может закрепиться какой либо рефлекс. Разница будет лишь в том, что рефлексы для стиля Плохо должны способствовать возращению в зону Норма, а рефлексы для стиля Норма и Хорошо не должны провоцировать выход из одноименной зоны.</p>
-<p>В текущем проекте Beast используются Базовые потребности с одним порогом, но в принципе возможны схемы с несколькими порогами. Ниже показан вариант с двумя.</p>
+В общем смысле стабилизация Базовой потребности означает нахождение в Зоне комфорта, а выход из зоны – необходимость принятия мер для возврата 
+в нее.</p>
+Важно отметить: строго говоря, на рефлекторном уровне реагирования, когда понятие «Смысл реакции» еще не существует и Beast реагирует как 
+  автомат, необходимость в Базовом состоянии Хорошо отсутствует. Достаточно лишь срабатывания состояния Плохо для запуска рефлексов, 
+  возвращающих уровень Базовой потребности в Норма, и состояния Норма, для прекращения работы рефлексов. Потому, что состояние Хорошо нужно 
+  для закрепления варианта реагирования, способствовавшего улучшению состояния. Но рефлексы не модифицируются по определению, это изначально 
+  заданные реакции на определенные пусковые стимулы, поэтому ни каком укреплении или блокировании рефлексов на первичном, рефлекторном уровне 
+  не может быть и речи. Это делается на уровне автоматизмов. Но возможность такой модификации должна быть заложена изначально, поэтому Базовое 
+  состояние Хорошо введено в схему.</p>
+С другой стороны, каждое из этих трех состояний определяет простейший контекст (стиль) реагирования, в котором может закрепиться какой либо 
+  рефлекс. Разница будет лишь в том, что рефлексы для стиля Плохо должны способствовать возращению в зону Норма, а рефлексы для стиля Норма и 
+  Хорошо не должны провоцировать выход из одноименной зоны.</p>
+В текущем проекте Beast используются Базовые потребности с одним порогом, но в принципе возможны схемы с несколькими порогами. Ниже показан 
+  вариант с двумя.
 <table>
 <tr>
 	<td><img src="../../img/bp2.png" width="470" height="470" border="0" alt="Компаратор 2 типа базовой потребности"></td>
-  <td valign="top">Два Порога в этом случае задают границы зоны комфорта, и можно сказать, что схема с одним Порогом является частным случаем общей схемы с несколькими. Просто в этом случае в качестве Порога используется граничные значения Базовой потребности: 0 или 100. В зависимости от типа потребности – нарастающей или убывающей.
-  <p>Определение Базовых состояний по каждой Базовой потребности с целью активации соответствующих специфических рефлексов означает, что нужна актуализация одной из потребностей как текущей. Иначе срабатывание Компаратора у нескольких потребностей может вызывать активацию конфликтующих рефлексов. Чтобы этого не случилось, можно выделить потребность с наибольшим удалением от зоны комфорта, где максимально Плохое состояние, и попытаться стабилизировать ее. Затем снова выделить наиболее актуальную и повторить процесс. Но такой вариант никак не учитывает в каждом шаге адаптации уровни других потребностей. Поэтому в данной реализации Beast используется интегральная оценка базового состояния, при которой учитываются уровни Плохо (насколько удалено текущее значение от Порога) по каждой потребности в виде суммарного отклонения, которое сравнивается с общим Пороговым значением 100, при превышении которого активируется интегральное Базовое состояние Плохо. Соответственно, если суммарное по всем Базовым потребностям Плохо меньше Порога – активно Базовое состояние Норма, а при переходе их Плохо в Норма активируется  Хорошо.</p>
+  <td valign="top">Два Порога в этом случае задают границы зоны комфорта, и можно сказать, что схема с одним Порогом является частным случаем 
+    общей схемы с несколькими. Просто в этом случае в качестве Порога используется граничные значения Базовой потребности: 0 или 100. 
+    В зависимости от типа потребности – нарастающей или убывающей.</p>
+  Определение Базовых состояний по каждой Базовой потребности с целью активации соответствующих специфических рефлексов означает, что 
+    нужна актуализация одной из потребностей как текущей. Иначе срабатывание Компаратора у нескольких потребностей может вызывать активацию 
+    конфликтующих рефлексов. Чтобы этого не случилось, можно выделить потребность с наибольшим удалением от зоны комфорта, где максимально 
+    Плохое состояние, и попытаться стабилизировать ее. Затем снова выделить наиболее актуальную и повторить процесс. Но такой вариант никак 
+    не учитывает в каждом шаге адаптации уровни других потребностей. Поэтому в данной реализации Beast используется интегральная оценка 
+    базового состояния, при которой учитываются уровни Плохо (насколько удалено текущее значение от Порога) по каждой потребности в виде 
+    суммарного отклонения, которое сравнивается с общим Пороговым значением 100, при превышении которого активируется интегральное Базовое 
+    состояние Плохо. Соответственно, если суммарное по всем Базовым потребностям Плохо меньше Порога – активно Базовое состояние Норма, а 
+    при переходе их Плохо в Норма активируется  Хорошо.</p>
   </td>
 </tr>
 </table>
