--- a/beast_scheme/package/add/condition_reflex.htm
+++ b/beast_scheme/package/add/condition_reflex.htm
@@ -12,18 +12,18 @@
 </div>
 Условные рефлексы Beast формируются, если в течении одного сеанса активации (до момента выключения или перехода в режим сна) 
 было не менее 3 повторов сочетаний следующей ситуации: перед текущим пусковым Образом, активировавшим безусловный рефлекс был 
-предшествующий Образ, который ничего не активировал, так как на него не было безусловного рефлекса.<br>
+предшествующий Образ, который ничего не активировал, так как на него не было безусловного рефлекса.</p>
 Образ активации Безусловных рефлексов включает в себя Базовое состояние, сочетание Базовых контекстов и сочетание Базовых действий 
 с пульта (нажатие кнопок действий). Для Условного рефлекса такой Образ дополняется фразой, тоном и настроением сообщения с Пульта. 
 Этот Образ, строго говоря, общий для всех типов рефлексов, просто для Безусловных фраза, тон и настроение не учитываются. Поэтому 
-Безусловные рефлексы не реагируют на вербальные раздражители, а только на изменение контекстов и/или действий.<br>
+Безусловные рефлексы не реагируют на вербальные раздражители, а только на изменение контекстов и/или действий.</p>
 Условные рефлексы это простейший способ определения причинно-следственной связи, когда выделяется повторяющаяся пара последовательно 
 возникающих раздражителей, из нее формируется новый пусковой Образ и он начинает активировать Безусловный рефлекс. Это позволяет 
 получить реакцию Beast на вербальные раздражители, если после отправки с Пульта фразы, на которую не будет реакции ввиду отсутствия 
 рефлекса на такой раздражитель, следующим шагом отправить действие (нажать кнопки действий), на которые есть безусловно-рефлекторная 
 реакция. Если такое сочетание повторится не менее трех раз, сформируется Условный рефлекс и теперь Beast будет реагировать на фразу 
 как на действия кнопок, хотя они могут и не нажиматься. Потому, что как и у Безусловных рефлексов здесь так же есть мягкое распознавание 
-на не полный Образ восприятия.<br>
+на не полный Образ восприятия.
 <table>
   <tr>
     <td><img src="../../img/Condition_reflex.png" width="928" height="1389" border="0" alt="Условный рефлекс"></td>
@@ -37,7 +37,7 @@
 </ul>
 Цикл повторяется 3 раза, в результате создается Условный рефлекс: на фразу Оператора «привет» Beast реагирует действием от пускового 
 раздражителя «Обрадоваться» - [улыбается, смеется]. Можно сделать прошивку Условного рефлекса за один раз, если активировать на Пульте 
-флажок «Режим форсированной обработки».<br>
+флажок «Режим форсированной обработки».</p>
 Каждый Условный рефлекс имеет «время жизни», при создании ему дается 30 дней, затем при каждой активации оно удваивается. Если же активации 
 в течении 30 дней не случилось, время жизни уменьшается на ту же величину и в конечном итоге, если время жизни обнуляется, рефлекс блокируется. 
 Таким образом, чем чаще он активируется, тем дольше он живет – укрепляется. Никаких других «подкреплений», положительных или отрицательных, 
