--- a/beast_scheme/package/add/integral_bs.htm
+++ b/beast_scheme/package/add/integral_bs.htm
@@ -10,12 +10,22 @@
 <a href="../../index.htm"><img src="../../img/home.png" style="position:absolute;top:0;left:0;" title="На главную."></a>
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Базовое состояние</h1>
 </div>
-<p>В текущей версии Beast используется интегральная оценка отклонений от пороговых значений Базовых потребностей. Это означает, что уровни отклонений BadValue по каждой Базовой потребности суммируются со знаком и сравниваются интегральным Порогом CompareLevel. Если суммарное значение превышает Порог, активируется состояние Плохо, если ниже Порога – состояние Норма, если произошел переход из Плохо в Норма, то на 50 пульсов активируется состояние Хорошо. При этом оценка отклонения от Порога CompareLevel меняется экспоненциально.</p>
+В текущей версии Beast используется интегральная оценка отклонений от пороговых значений Базовых потребностей. Это означает, что уровни 
+отклонений BadValue по каждой Базовой потребности суммируются со знаком и сравниваются интегральным Порогом CompareLevel. Если суммарное 
+значение превышает Порог, активируется состояние Плохо, если ниже Порога – состояние Норма, если произошел переход из Плохо в Норма, то 
+на 50 пульсов активируется состояние Хорошо. При этом оценка отклонения от Порога CompareLevel меняется экспоненциально.</p>
 <table>
   <tr>
     <td><img src="../../img/IntegBS.png" width="970" height="632" border="0" alt="Интегральное базовое состояние"></td>
   </tr>
   </table>
-<p>Срабатывание Компараторов Базовых потребностей активирует Базовые контексты, определяющие стили реагирования. Они заданы в справочниках на странице go/pages/gomeostaz.php. Каждая Базовая потребность активирует и гасит определенные Базовые контексты, при этом некоторые из них могут быть не совместимыми, что означает их взаимное торможение. Итоговый Контекстный рисунок из активных Базовых контекстов составляет интегральный Образ активации рефлексов</p>
-<p>Базовые потребности делятся на 2 типа: нарастающие и убывающие. В первом случае происходит ритмичное увеличение значения с каждым пульсом, во втором ритмичное уменьшение. При этом величина изменения за один шаг у некоторых Базовых потребностей так же меняется. Например, при уровне Энергии < 5 прибавка скорости повреждений увеличивается, при уровне Стресса > 70 возрастает сам Стресс.</p>
-<p>Изменения уровней Базовых потребностей при пульсации симулируют процессы гомеостаза, меняющие состояние организма. Это означает, что даже если не будет никаких реакций со стороны Оператора, общее состояние Beast все равно изменится, что вынудит его активировать рефлексы адаптации.</p>
+Срабатывание Компараторов Базовых потребностей активирует Базовые контексты, определяющие стили реагирования. Они заданы в справочниках на 
+странице go/pages/gomeostaz.php. Каждая Базовая потребность активирует и гасит определенные Базовые контексты, при этом некоторые из них 
+могут быть не совместимыми, что означает их взаимное торможение. Итоговый Контекстный рисунок из активных Базовых контекстов составляет 
+интегральный Образ активации рефлексов</p>
+Базовые потребности делятся на 2 типа: нарастающие и убывающие. В первом случае происходит ритмичное увеличение значения с каждым пульсом, 
+во втором ритмичное уменьшение. При этом величина изменения за один шаг у некоторых Базовых потребностей так же меняется. Например, при 
+уровне Энергии < 5 прибавка скорости повреждений увеличивается, при уровне Стресса > 70 возрастает сам Стресс.</p>
+Изменения уровней Базовых потребностей при пульсации симулируют процессы гомеостаза, меняющие состояние организма. Это означает, что даже 
+если не будет никаких реакций со стороны Оператора, общее состояние Beast все равно изменится, что вынудит его активировать рефлексы 
+адаптации.</p>
