--- a/beast_scheme/package/add/reflex_tree.htm
+++ b/beast_scheme/package/add/reflex_tree.htm
@@ -12,9 +12,9 @@
 </div>
 Безусловные рефлексы у Beast – это жестко запрограммированные реакции на действия кнопок с Пульта. Устанавливаются на 
   странице Рефлексы http://go/pages/reflexes.php через заполнение справочников и шаблонов. По аналогии с природной нервной 
-  системой это закрепленные эволюционным отбором не изменяемые реакции.<br>
+  системой это закрепленные эволюционным отбором не изменяемые реакции.</p>
 Рефлекторное реагирование происходит разово при возникновении пусковых условий, формирующих итоговый Образ восприятия 
-  TriggerStimulsArr из трех уровней:<br>
+  TriggerStimulsArr из трех уровней:
 <ol>
   <li><b>Изменение Базового состояния</b> – если изменилось базовое состояние Плохо, Норма, Хорошо</li>
   <li><b>Изменение Базовых контекстов</b> - если изменилось сочетание текущих активных базовых контекстов</li>
@@ -24,7 +24,7 @@
   древовидную структуру Образа восприятия. 
   Это означает, что возможны комбинации Базового Состояния и Базовых контекстов, без учета Пусковых стимулов, 
   но не возможны комбинации Базового Состояния и Пусковых стимулов без учета Базовых контекстов. Образ восприятия 
-  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.<br>
+  всегда формируется в порядке: Базовое Состояние – Базовые контексты – Пусковые стимулы.</p>
 <table>
   <tr>
     <td><img src="../../img/Reflex_tree.png" width="948" height="1432" border="0" alt="Дерево безусловных рефлексов"></td>
@@ -46,7 +46,7 @@
 </ol>
 Активизация происходит по правилу: если активны все три уровня Образа восприятия, ищется Новый безусловный рефлекс, если только 
 первые два – Древний безусловный, если ничто не нашлось – древнейший безусловный. Таким образом на изменение сочетаний Базовых контекстов и 
-Базового состояния всегда будет как минимум реакция от Древнейшего безусловного рефлекса.<br>
+Базового состояния всегда будет как минимум реакция от Древнейшего безусловного рефлекса.</p>
 Выполнение Безусловного рефлекса означает выполнение действий, параметры воздействий которых задаются в справочнике Действия 
 (go/pages/terminal_actions.php). Собственно в этом и состоит гомеостатическая цель рефлекса – спровоцировать такие изменения вышедших 
 из Норма Базовых потребностей, которые будут способствовать их возврату в Норма. При этом очевидна ограниченность такого реагирования: 
