--- a/beast_scheme/pult.htm
+++ b/beast_scheme/pult.htm
@@ -11,5 +11,27 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;'>Схема Пульт связи с Beast</h1>
 </div>
 
+Пульт имеет главную страницу /pult.php, которую поддерживают основные файлы в корне сайта и множество редакторов, скрипты которых собраны в папке /pages/.<br>
+Главный скрипт Пульта - /pult.php.<br>
+Пульт написан на PHP и JS без каких-то фреймворков и поэтому код легко воспринимается нормальным программистом (особенно через PhpStorm), так что не требует детального разбора.<br>
+В исходном состоянии Пульт выглядит следующим образом:<br>
+<img src="img/pult_closed.jpg"><br>
+При включении Beast вызывается /run.php, при выключении - /kill.php.<br>
+Блок “Управление жизненными параметрами” обслуживается скриптом /pult_gomeo.php.<br>
+Блок “Состояние базовых контекстов” обслуживается скриптом /pult_base_contexts.php.<br>
+Блок “ Поcлать сообщение Beast” обслуживается скриптом /pult_Bot_dialog.php.<br>
+Блок “ (Де)мотивирующие дйствия в ответ на действия Beast” обслуживается скриптом.<br>
+Блок “ pult_actions.php” обслуживается скриптом /pult_actions.php.<br>
+Блок “Консоль событий Beast (тех инфа) ” обслуживается скриптом /pult_consol.php.<br>
+Во включенном состоянии ползунки состояния жизненных параметров принимают последнее сохраненное состояние, начинается синхронизация с тактовым генератором (1 сек) “Пульса” и обеспечивается взаимодействие с Beast.<br>
+Пульт во включенном состоянии выглядит примерно так:<br>
+<img src="img/pult_00.jpg"><br>
+Понимание работы с Пультом требует ясного понимания функциональности Beast и того, что именно и как ее обеспечивает. Тогда сам Пульт и редакторы воспринимаются без особых затруднений.<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
